--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2571,6 +2571,28 @@ footer .footer-data .footer-right li:last-child::after {
   width: 340px;
 }
 
+@media (max-width: 575px) {
+  .online-register-page ul li {
+    gap: 10px;
+  }
+}
+.online-register-page .record-list.mb-36 {
+  margin-bottom: 36px;
+}
+@media (max-width: 575px) {
+  .online-register-page .record-list.mb-36 {
+    margin-bottom: 38px;
+  }
+}
+.online-register-page .record-list.mb-34 {
+  margin-bottom: 34px;
+}
+@media (max-width: 575px) {
+  .online-register-page .record-list.mb-34 {
+    margin-bottom: 38px;
+  }
+}
+
 .record-btn {
   display: flex;
   justify-content: center;
@@ -4898,30 +4920,133 @@ button:focus:not(:focus-visible) {
   letter-spacing: 6px;
 }
 
+@media (max-width: 575px) {
+  .register-page-mobile {
+    padding: 0 20px;
+  }
+}
+
+.register-page-title h2 {
+  color: #F6774E;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 41px;
+  letter-spacing: 3px;
+  margin-bottom: 2px;
+}
+@media (max-width: 575px) {
+  .register-page-title h2 {
+    font-size: 22px;
+    line-height: 30px;
+    margin-bottom: 13px;
+  }
+}
+.register-page-title h3 {
+  color: #F6774E;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 27px;
+  letter-spacing: 3px;
+  margin-bottom: 16px;
+}
+@media (max-width: 575px) {
+  .register-page-title h3 {
+    font-size: 22px;
+    line-height: 27px;
+    margin-bottom: 7px;
+  }
+}
+.register-page-title p {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: 3px;
+  color: #555555;
+  margin-bottom: 0;
+}
+.register-page-title p:last-child {
+  margin-bottom: 27px;
+}
+
 .online-register-page {
   width: 776px;
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
   border-radius: 29px;
-  margin-bottom: 199px !important;
+  margin-bottom: 122px !important;
+}
+@media (max-width: 1024px) {
+  .online-register-page {
+    width: 720px;
+  }
+}
+@media (max-width: 768px) {
+  .online-register-page {
+    width: 580px;
+  }
 }
 @media (max-width: 575px) {
   .online-register-page {
     width: 100%;
-    padding: 41px 11px 46px 11px;
-    margin-bottom: 92px !important;
   }
-  .online-register-page.mobile-register {
-    padding: 38px 18px 40px 18px;
+}
+.online-register-page .qr-img {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 47px;
+}
+@media (max-width: 575px) {
+  .online-register-page .qr-img {
+    margin-bottom: 26px;
+    padding-right: 20px;
   }
 }
 .online-register-page .record-detail {
-  padding: 21px 100px 0px 170px;
+  padding: 21px 170px 0px 170px;
+}
+@media (max-width: 768px) {
+  .online-register-page .record-detail {
+    padding: 35px 80px 0px 80px;
+  }
+}
+@media (max-width: 575px) {
+  .online-register-page .record-detail {
+    padding: 20px 1px 0 23px;
+  }
 }
 .online-register-page .record-btn {
   padding: 60px 73px 61px 71px;
 }
+@media (max-width: 1024px) {
+  .online-register-page .record-btn {
+    padding: 60px 30px 61px 30px;
+  }
+}
+@media (max-width: 768px) {
+  .online-register-page .record-btn {
+    gap: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .online-register-page .record-btn {
+    padding: 84px 74px 61px 62px;
+    gap: 33px;
+  }
+}
 .online-register-page .record-btn .btn {
   width: 184px;
+  padding: 8px 20px;
+}
+@media (max-width: 768px) {
+  .online-register-page .record-btn .btn {
+    width: 160px;
+    padding: 8px 10px;
+  }
+}
+@media (max-width: 575px) {
+  .online-register-page .record-btn .btn {
+    width: 207px;
+    padding: 8px 10px;
+  }
 }
 
 .subscrib.custom-checkbox {
