--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2478,6 +2478,27 @@ footer {
     }
   }
 }
+.online-register-page{
+  ul li{
+    @media (max-width: #{$sm}) {
+      gap: 10px;
+     }
+  }
+  .record-list{
+    &.mb-36{
+      margin-bottom: 36px;
+      @media (max-width: #{$sm}) {
+        margin-bottom: 38px;
+       }
+    }
+    &.mb-34{
+      margin-bottom: 34px;
+      @media (max-width: #{$sm}) {
+        margin-bottom: 38px;
+       }
+    }
+  }
+}
 .record-btn{
   display: flex;
   justify-content: center;
@@ -4480,27 +4501,107 @@ color: #787878;
 }
   }
 }
+.register-page-mobile{
+  @media (max-width: #{$sm}) {
+    padding: 0 20px;
+  }
+}
+.register-page-title{
+  h2{
+    color: #F6774E;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 41px;
+    letter-spacing: 3px;
+    margin-bottom: 2px;
+    @media (max-width: #{$sm}) {
+     font-size: 22px;
+     line-height: 30px;
+     margin-bottom: 13px;
+    }
+  }
+  h3{
+    color: #F6774E;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 27px;
+    letter-spacing: 3px;
+    margin-bottom: 16px;
+    @media (max-width: #{$sm}) {
+      font-size: 22px;
+      line-height: 27px;
+      margin-bottom:7px;
+     }
+  }
+  p{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    letter-spacing: 3px;
+    color: 
+    #555555;
+    margin-bottom: 0;
+    &:last-child{
+      margin-bottom: 27px;
+    }
+  }
+}
 .online-register-page{
   width: 776px;
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
   border-radius: 29px;
-  margin-bottom: 199px !important;
-  @media (max-width: #{$sm}) {
-   width: 100%;
-   padding: 41px 11px 46px 11px;
-   margin-bottom: 92px !important;
-   &.mobile-register{
-    padding: 38px 18px 40px 18px;
-   }
+  margin-bottom: 122px !important;
+  @media (max-width: #{$xl}) {
+    width: 720px;
+  }
+@media (max-width: #{$med}) {
+    width: 580px;
+  }
+@media (max-width: #{$sm}) {
+    width: 100%;
+  }
+
+  .qr-img{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 47px;
+    @media (max-width: #{$sm}) {
+      margin-bottom: 26px;
+      padding-right: 20px;
+      }
   }
   .record-detail{
-    padding: 21px 100px 0px 170px;
+    padding: 21px 170px 0px 170px;
+    @media (max-width: #{$med}) {
+    padding:  35px 80px 0px 80px;
+    }
+    @media (max-width: #{$sm}) {
+      padding: 20px 1px 0 23px;
+    }
   }
  .record-btn{
   padding: 60px 73px 61px 71px;
+  @media (max-width: #{$xl}) {
+    padding:  60px 30px 61px 30px;
+    }
+  @media (max-width: #{$med}) {
+    gap: 20px;
+    }
+  @media (max-width: #{$med}) {
+    padding:  84px 74px 61px 62px;
+    gap: 33px;
+    }
   .btn{
     width: 184px;
-    
+    padding: 8px 20px;
+    @media (max-width: #{$med}) {
+      width: 160px;
+      padding: 8px 10px;
+      }
+    @media (max-width: #{$sm}) {
+      width: 207px;
+      padding: 8px 10px;
+      }
   }
  }
 }
