--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ header .header-data {
 }
 @media (max-width: 575px) {
   header .header-data {
-    padding: 17px 0 26px 12px;
+    padding: 17px 0 26px 8px;
   }
 }
 header .header-data h3 {
@@ -2885,12 +2885,20 @@ body {
 
 .popup {
   display: none;
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   z-index: 99999;
+}
+.popup.edmall-pop {
+  top: 60%;
+}
+@media (max-width: 1440px) {
+  .popup.edmall-pop {
+    top: 77%;
+  }
 }
 
 .dropdown-toggle::after {
@@ -3231,6 +3239,9 @@ button:focus:not(:focus-visible) {
 .title-popup-1st .popup-data3.third-pop {
   height: 326px;
 }
+.title-popup-1st .popup-data3.edmall-pop2 {
+  height: 442px;
+}
 .title-popup-1st .popup-data3 .close {
   position: absolute;
   top: 22px;
@@ -3254,12 +3265,28 @@ button:focus:not(:focus-visible) {
   color: #3A3A3A;
   margin-bottom: 18px;
 }
+.title-popup-1st .popup-data3 h2.edmall-pop2 {
+  margin-bottom: 29px;
+}
 .title-popup-1st .popup-data3 p {
   margin-bottom: 0;
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
   color: #787878;
+}
+.title-popup-1st .popup-data3 p.edmall-pop2 {
+  margin-bottom: 35px;
+}
+.title-popup-1st .popup-data3 .pop2-btn {
+  color: #F6774E;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 27px;
+  letter-spacing: 4px;
+  border: 1px solid #F6774E;
+  border-radius: 20px;
+  padding: 17px 39px 16px 32px;
 }
 .title-popup-1st .popup-data4 {
   border-radius: 40px;
@@ -3839,6 +3866,7 @@ button:focus:not(:focus-visible) {
     width: 85px;
   }
 }
+
 @keyframes moveUpDown {
   0% {
     transform: translateY(0);
@@ -3847,12 +3875,13 @@ button:focus:not(:focus-visible) {
     transform: translateY(10px);
   }
 }
-.register-list-form .form-list .form-list-data .btm-errow {
+.btm-errow {
   text-align: end;
   margin-top: 13px;
   cursor: pointer;
 }
-.register-list-form .form-list .form-list-data .btm-errow img {
+
+.btm-errow img {
   animation: moveUpDown 0.5s linear infinite alternate;
 }
 
@@ -5240,6 +5269,17 @@ button:focus:not(:focus-visible) {
   margin: 0;
 }
 
+@media (max-width: 575px) {
+  .emd-mobile .container {
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 575px) {
+  .edmall .container {
+    padding: 0 20px;
+  }
+}
 .edmall .owl-carousel .item.active svg path {
   fill: #F6774E;
 }
@@ -5251,15 +5291,41 @@ button:focus:not(:focus-visible) {
   padding-bottom: 63px;
   padding-top: 33px;
 }
+@media (max-width: 575px) {
+  .edmall-slider {
+    padding-bottom: 25px;
+  }
+}
 
 .book-svg {
   position: relative;
-  padding-right: 24px;
+}
+.book-svg img {
+  width: 100%;
+  max-width: 600px;
 }
 .book-svg .book-data {
   position: absolute;
-  top: 45px;
-  left: 42px;
+  top: 69px;
+  left: 78px;
+}
+@media (max-width: 1440px) {
+  .book-svg .book-data {
+    top: 45px;
+    left: 35px;
+  }
+}
+@media (max-width: 375px) {
+  .book-svg .book-data {
+    top: 33px;
+    left: 27px;
+  }
+}
+@media (max-width: 320px) {
+  .book-svg .book-data {
+    top: 22px;
+    left: 10px;
+  }
 }
 .book-svg .book-data h3 {
   text-align: center;
@@ -5268,10 +5334,20 @@ button:focus:not(:focus-visible) {
   line-height: 22px;
   color: #585858;
   width: 100%;
-  max-width: 100px;
+  max-width: 110px;
+}
+
+.edmall-main {
+  margin-bottom: 0;
+}
+
+.rounded-bottom {
+  border-bottom-left-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
 }
 
 .edmall-dropdown {
+  position: relative;
   background-color: #F6774E;
   border-radius: 10px;
   padding: 14px 32px 14px 20px;
@@ -5279,6 +5355,22 @@ button:focus:not(:focus-visible) {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+@media (max-width: 1440px) {
+  .edmall-dropdown {
+    margin: 0 19px 0 81px;
+  }
+}
+@media (max-width: 768px) {
+  .edmall-dropdown {
+    margin: 0 19px 0 19px;
+  }
+}
+@media (max-width: 575px) {
+  .edmall-dropdown {
+    margin: 0;
+    padding: 11px 18px 11px 20px;
+  }
 }
 .edmall-dropdown .edmall-checkmark {
   display: flex;
@@ -5298,12 +5390,6 @@ button:focus:not(:focus-visible) {
   height: 29px;
   width: 26px;
 }
-@media (max-width: 575px) {
-  .edmall-dropdown .custom-checkbox {
-    width: 50px;
-    height: 50px;
-  }
-}
 .edmall-dropdown .custom-checkbox input {
   position: absolute;
   opacity: 0;
@@ -5316,7 +5402,7 @@ button:focus:not(:focus-visible) {
   box-shadow: none;
 }
 .edmall-dropdown .custom-checkbox input:checked ~ .checkmark:after {
-  display: block;
+  display: none;
 }
 .edmall-dropdown .custom-checkbox .checkmark {
   position: absolute;
@@ -5330,7 +5416,6 @@ button:focus:not(:focus-visible) {
 .edmall-dropdown .custom-checkbox .checkmark:after {
   content: "";
   position: absolute;
-  display: none;
   left: 9px;
   top: 2px;
   width: 9px;
@@ -5342,16 +5427,288 @@ button:focus:not(:focus-visible) {
 .edmall-dropdown .open-btn {
   border: 3px solid #ffffff;
   padding: 10px 15px;
-  border-radius: 30px;
+  border-radius: 20px;
   color: #ffffff;
   font-size: 20px;
   line-height: 27px;
-  font-kerning: 700;
+  font-weight: 700;
   letter-spacing: 4px;
+}
+@media (max-width: 575px) {
+  .edmall-dropdown .open-btn {
+    padding: 10px 15px 10px 20px;
+  }
+}
+.edmall-dropdown .yellow-btn {
+  font-size: 20px;
+  line-height: 27px;
+  font-weight: 700;
+  letter-spacing: 4px;
+  padding: 9px 18px 9px 24px;
+  border-radius: 30px;
+  background-color: #FBEE6C;
+  color: #444444;
 }
 
 .edmall-dropdown-data {
+  background-color: #F6774E;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: 14px 32px 14px 20px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+}
+.edmall-dropdown-data .drop-content {
   background-color: #FFFEEF;
+  padding: 34px 56px 71px 56px;
+  width: 100%;
+  border-radius: 5px;
+}
+@media (max-width: 575px) {
+  .edmall-dropdown-data .drop-content {
+    padding: 34px 20px 71px 20px;
+  }
+}
+.edmall-dropdown-data .drop-content h3 {
+  color: #444444;
+  font-weight: 600;
+  letter-spacing: 3px;
+  line-height: 24px;
+  font-size: 18px;
+  margin-bottom: 15px;
+}
+.edmall-dropdown-data .drop-content .btn-line {
+  display: flex;
+  gap: 12px;
+  margin-bottom: 49px;
+  flex-wrap: wrap;
+}
+.edmall-dropdown-data .drop-content .btn-line .btn {
+  width: 104px;
+  height: 44px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 2px;
+  color: #F6774E;
+  border: 1px solid #F6774E;
+}
+.edmall-dropdown-data .drop-content .btn-line .btn:first-child {
+  background-color: #F6774E;
+  color: #ffffff;
+}
+@media (max-width: 575px) {
+  .edmall-dropdown-data .drop-content .btn-line .btn {
+    font-size: 16px;
+  }
+}
+@media (max-width: 375px) {
+  .edmall-dropdown-data .drop-content .btn-line .btn {
+    width: 88px;
+  }
+}
+.edmall-dropdown-data .drop-content .btn-line.increse-btn {
+  width: 100%;
+  flex-wrap: wrap;
+  max-width: 800px;
+  margin-bottom: 0;
+}
+.edmall-dropdown-data .drop-content .btn-line.increse-btn .btn {
+  width: 151px;
+}
+@media (max-width: 575px) {
+  .edmall-dropdown-data .drop-content .btn-line.increse-btn .btn {
+    width: 139px;
+  }
+}
+
+.edmall-list {
+  padding-top: 48px;
+  margin: 0 100px 0 160px;
+}
+@media (max-width: 1440px) {
+  .edmall-list {
+    margin: 0 19px 0 81px;
+  }
+}
+@media (max-width: 768px) {
+  .edmall-list {
+    margin: 0 19px 0 19px;
+  }
+}
+@media (max-width: 575px) {
+  .edmall-list {
+    margin: 0;
+    padding-top: 29px;
+  }
+}
+.edmall-list .edmall-list-data {
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
+  margin-bottom: 18px;
+  border-radius: 40px;
+  padding: 8px 36px 8px 49px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media (max-width: 575px) {
+  .edmall-list .edmall-list-data {
+    flex-direction: column;
+    padding: 6px 39px 15px 39px;
+    margin-bottom: 19px;
+  }
+}
+.edmall-list .edmall-list-data .list-left {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+}
+@media (max-width: 575px) {
+  .edmall-list .edmall-list-data .list-left {
+    flex-wrap: wrap;
+    margin-bottom: 18px;
+  }
+}
+@media (max-width: 575px) {
+  .edmall-list .edmall-list-data .list-left img {
+    margin: 0 auto;
+  }
+}
+.edmall-list .edmall-list-data .list-left h3 {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 600;
+  color: #444444;
+  letter-spacing: 3px;
+  margin-bottom: 5px;
+}
+.edmall-list .edmall-list-data .list-left ul li {
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 600;
+  color: #787878;
+  margin-bottom: 1px;
+}
+.edmall-list .edmall-list-data .list-right .btn {
+  border: 1px solid #F6774E;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 4px;
+  font-weight: 700;
+  padding: 13px 22px 12px 29px;
+  color: #F6774E;
+  border-radius: 20px;
+}
+@media (max-width: 575px) {
+  .edmall-list .edmall-list-data .list-right .btn {
+    padding: 19px 25px 20px 26px;
+  }
+}
+
+.edmall-pop .popup-data {
+  text-align: start;
+  padding: 9px 78px 42px 100px;
+  height: auto;
+}
+@media (max-width: 575px) {
+  .edmall-pop .popup-data {
+    padding: 9px 30px 42px 30px;
+  }
+}
+.edmall-pop .popup-data .img-center {
+  display: flex;
+  justify-content: center;
+}
+.edmall-pop .popup-data .pop-list {
+  margin-bottom: 22px;
+}
+.edmall-pop .popup-data .pop-list h5 {
+  color: #444444;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 600;
+  letter-spacing: 3px;
+  margin-bottom: 5px;
+}
+.edmall-pop .popup-data .pop-list p {
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 3px;
+  color: #787878;
+  font-weight: 400;
+  padding-left: 30px;
+}
+@media (max-width: 575px) {
+  .edmall-pop .popup-data .pop-list p {
+    padding-left: 0;
+    margin-top: 20px;
+  }
+}
+.edmall-pop .popup-data .pop-form form .mb {
+  margin-bottom: 11px;
+  display: flex;
+  align-items: center;
+  gap: 28px;
+}
+.edmall-pop .popup-data .pop-form form label {
+  font-size: 16px;
+  color: #444444;
+  line-height: 22px;
+  font-weight: 600;
+  width: 80px;
+  letter-spacing: 5px;
+  margin: 0;
+}
+.edmall-pop .popup-data .pop-form form input {
+  border: 1px solid #787878;
+  border-radius: 10px;
+  height: 38px;
+  padding: 8px 22px;
+  margin: 0;
+  width: 100%;
+}
+.edmall-pop .popup-data .pop-form form input::placeholder {
+  color: #555555;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+}
+.edmall-pop .popup-data .pop-form form input:focus {
+  box-shadow: none;
+  outline: none;
+}
+.edmall-pop .popup-data .pop-form form .form-floating {
+  width: 100%;
+}
+.edmall-pop .popup-data .pop-form form textarea {
+  height: 108px;
+  border: 1px solid #787878;
+  border-radius: 10px;
+  padding: 8px 22px;
+  margin: 0;
+  margin-bottom: 28px;
+  margin-top: 16px;
+}
+.edmall-pop .popup-data .pop-form form textarea::placeholder {
+  color: #555555;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+}
+.edmall-pop .popup-data .pop-form form textarea:focus {
+  box-shadow: none;
+  outline: none;
+}
+.edmall-pop .popup-data .pop-form form .submit-btn {
+  font-size: 20px;
+  line-height: 27px;
+  color: #F6774E;
+  font-weight: 700;
+  letter-spacing: 4px;
+  background-color: transparent;
+  border: 1px solid #F6774E;
 }
 
 /*# sourceMappingURL=style.css.map */
