--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -222,7 +222,7 @@ header {
     align-items: center;
     padding: 8px 0;
     @media (max-width: #{$sm}) {
-      padding: 17px 0 26px 12px;
+      padding: 17px 0 26px 8px;
     }
     h3 {
       color: $white-color;
@@ -2787,12 +2787,18 @@ body {
 
 .popup {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     z-index: 99999;
+    &.edmall-pop{
+      top: 60%;
+      @media (max-width: #{$xlll}) {
+       top: 77%;
+           }
+    }
 }
 
 
@@ -3047,6 +3053,9 @@ button:focus:not(:focus-visible){
   &.third-pop{
     height: 326px;
   }
+  &.edmall-pop2{
+    height: 442px;
+  }
   .close{
     @include popup-close();
   }
@@ -3063,6 +3072,9 @@ h2{
   line-height: 28px;
   color: #3A3A3A;
   margin-bottom: 18px;
+  &.edmall-pop2{
+    margin-bottom: 29px;
+  }
 }
 p{
   margin-bottom: 0;
@@ -3071,6 +3083,19 @@ p{
   line-height: 24px;
   color: 
   #787878;
+  &.edmall-pop2{
+    margin-bottom: 35px;
+  }
+}
+.pop2-btn{
+  color: #F6774E;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 27px;
+  letter-spacing: 4px;
+  border: 1px solid  #F6774E;
+  border-radius: 20px;
+  padding: 17px 39px 16px 32px;
 }
 }
 
@@ -3533,26 +3558,26 @@ p{
            }
         }
       }
-      @keyframes moveUpDown {
-        0% {
-          transform: translateY(0);
-        }
-        100% {
-          transform: translateY(10px);
-        }
-      }
-      .btm-errow {
-        text-align: end;
-        margin-top: 13px;
-        cursor: pointer;
-      }
-      .btm-errow img {
-        animation: moveUpDown 0.5s linear infinite alternate;
-      }
+      
     }
   }
 }
-
+@keyframes moveUpDown {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(10px);
+  }
+}
+.btm-errow {
+  text-align: end;
+  margin-top: 13px;
+  cursor: pointer;
+}
+.btm-errow img {
+  animation: moveUpDown 0.5s linear infinite alternate;
+}
 .list-slider{
   padding-left: 85px;
   .container-fluid{
@@ -4775,7 +4800,19 @@ color: #787878;
 
 
 // ----edmall--start
+.emd-mobile{
+  .container{
+    @media (max-width: #{$sm}) {
+      padding: 0 20px;
+         }
+  }
+}
 .edmall{
+  .container{
+    @media (max-width: #{$sm}) {
+      padding: 0 20px;
+         }
+  }
   .owl-carousel{
     .item{
       &.active{
@@ -4793,14 +4830,34 @@ color: #787878;
 .edmall-slider{
   padding-bottom: 63px;
   padding-top: 33px;
+  @media (max-width: #{$sm}) {
+    padding-bottom: 25px;
+}
 }
 .book-svg{
   position: relative;
-  padding-right: 24px;
+img{
+  width: 100%;
+  max-width: 600px;
+}
   .book-data{
     position: absolute;
-    top: 45px;
-    left: 42px;
+
+    top: 69px;
+    left: 78px;
+    @media (max-width: #{$xlll}) {
+      top: 45px;
+      left: 35px;
+         }
+    @media (max-width: #{$xs}) {
+      top: 33px;
+      left: 27px;
+         }
+    @media (max-width: #{$xss}) {
+      top: 22px;
+      left: 10px;
+         }
+    
     h3{
       text-align: center;
       font-size: 16px;
@@ -4809,11 +4866,20 @@ color: #787878;
       color: 
       #585858;
       width: 100%;
-      max-width: 100px;
+      max-width: 110px;
     }
   }
 }
+
+.edmall-main{
+ margin-bottom: 0;
+}
+.rounded-bottom {
+  border-bottom-left-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
 .edmall-dropdown{
+  position: relative;
   background-color: #F6774E;
   border-radius: 10px;
   padding: 14px 32px 14px 20px;
@@ -4821,6 +4887,16 @@ color: #787878;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @media (max-width: #{$xlll}) {
+    margin:0 19px 0 81px;
+     }
+  @media (max-width: #{$med}) {
+    margin:0 19px 0 19px;
+     }
+  @media (max-width: #{$sm}) {
+    margin:0;
+    padding: 11px 18px 11px 20px;
+     }
   .edmall-checkmark{
     display: flex;
     align-items: center;
@@ -4838,10 +4914,6 @@ color: #787878;
     display: inline-block;
     height: 29px;
     width: 26px;
-    @media (max-width: #{$sm}) {
-      width: 50px;
-      height: 50px;
-    }
     input {
       position: absolute;
       opacity: 0;
@@ -4853,7 +4925,7 @@ color: #787878;
         box-shadow: none;
       }
       &:checked ~ .checkmark:after {
-        display: block;
+        display: none;
       }
     }
 
@@ -4869,7 +4941,7 @@ color: #787878;
       &:after {
         content: "";
         position: absolute;
-        display: none;
+        // display: none;
         left: 9px;
         top: 2px;
         width: 9px;
@@ -4884,17 +4956,283 @@ color: #787878;
   .open-btn{
 border:  3px solid $white-color;
 padding: 10px 15px;
-border-radius: 30px;
+border-radius: 20px;
 color: $white-color;
 font-size: 20px;
 line-height: 27px;
-font-kerning: 700;
+font-weight: 700;
 letter-spacing: 4px;
+@media (max-width: #{$sm}) {
+ padding: 10px 15px 10px 20px;
+     }
+  }
+  .yellow-btn{
+    font-size: 20px;
+line-height: 27px;
+font-weight: 700;
+letter-spacing: 4px;
+padding: 9px 18px 9px 24px;
+border-radius: 30px;
+    background-color: 
+    #FBEE6C;
+    color: #444444;
   }
 }
 .edmall-dropdown-data{
-  background-color: #FFFEEF;
+  background-color: #F6774E;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: 14px 32px 14px 20px;
+  // margin: 0 100px 0 160px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  .drop-content{
+    background-color: #FFFEEF;
+    padding: 34px 56px 71px 56px;
+    width: 100%;
+    border-radius: 5px;
+   
+    @media (max-width: #{$sm}) {
+  padding:34px 20px 71px 20px ;
+       }
+    
+    h3{
+      color: #444444;
+      font-weight: 600;
+      letter-spacing: 3px;
+      line-height: 24px;
+      font-size: 18px;
+      margin-bottom: 15px;
+    }
+    .btn-line{
+      display: flex;
+      gap: 12px ;
+      margin-bottom: 49px;
+     flex-wrap: wrap;
+      .btn{
+        width: 104px;
+        height: 44px;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: 2px;
+        color: #F6774E;
+        border: 1px solid #F6774E;
+        &:first-child{
+          background-color: #F6774E;
+          color: $white-color;
+        }
+        @media (max-width: #{$sm}) {
+          font-size: 16px;
+           }
+        @media (max-width: #{$xs}) {
+          width: 88px;
+           }
+      }
+      &.increse-btn{
+        width: 100%;
+        flex-wrap: wrap;
+        max-width: 800px;
+        margin-bottom: 0;
+        .btn{
+          width: 151px;
+          @media (max-width: #{$sm}) {
+            width: 139px;
+             }
+        }
+      }
+    }
+  }
+}
+.edmall-list{
+  padding-top: 48px;
+  margin: 0 100px 0 160px;
+  @media (max-width: #{$xlll}) {
+    margin:0 19px 0 81px;
+     }
+  @media (max-width: #{$med}) {
+    margin:0 19px 0 19px;
+     }
+  @media (max-width: #{$sm}) {
+    margin:0;
+    padding-top: 29px;
+     }
+  .edmall-list-data{
+    box-shadow: 0 0 5px 0 
+    rgba(0, 0, 0, 0.25);
+    margin-bottom: 18px; 
+    border-radius: 40px;
+    padding: 8px 36px 8px 49px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+@media (max-width: #{$sm}) {
+ flex-direction: column;padding: 6px 39px 15px 39px;
+ margin-bottom: 19px;
+   }
+.list-left{
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  @media (max-width: #{$sm}) {
+   flex-wrap: wrap;
+   margin-bottom: 18px;
+      }
+      img{
+        @media (max-width: #{$sm}) {
+        margin: 0 auto;
+             }
+      }
+  h3{
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 600;
+    color: 
+    #444444;
+    letter-spacing: 3px;
+    margin-bottom: 5px;
+  }
+   ul{
+    li{
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: 600;
+    color: #787878;
+    margin-bottom: 1px;
+    }
+   }
+}
+.list-right{
+  .btn{
+    border: 1px solid 
+    #F6774E;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 4px;
+    font-weight: 700;
+    padding: 13px 22px 12px 29px;
+    color: 
+#F6774E;
+border-radius: 20px;
+@media (max-width: #{$sm}) {
+  padding: 19px 25px 20px 26px;
+     }
+  }
+}
+  }
 }
 
+.edmall-pop{
+.popup-data{
+  text-align: start;
+  padding: 9px 78px 42px 100px;
+  height: auto;
+    @media (max-width: #{$sm}) {
+      padding: 9px 30px 42px 30px;
+         }
+  .img-center{
+    display: flex;
+    justify-content: center;
+  }
+  .pop-list{
+margin-bottom: 22px;
+    h5{
+      color: #444444;
+      font-size: 18px;
+      line-height: 24px;
+      font-weight: 600;
+      letter-spacing: 3px;
+      margin-bottom: 5px;
+    }
+    p{
+      font-size: 16px;
+      line-height: 30px;
+      letter-spacing: 3px;
+      color: 
+      #787878;
+      font-weight: 400;
+      padding-left: 30px;
+      @media (max-width: #{$sm}) {
+        padding-left: 0;
+        margin-top: 20px;
+           }
+    }
+  }
+  .pop-form{
+    form{
+      .mb{
+      margin-bottom: 11px;
+      display: flex;
+      align-items: center;
+gap: 28px;
+      }
+      label{
+        font-size: 16px;
+        color: 
+        #444444;
+        line-height: 22px;
+        font-weight: 600;
+        width: 80px;
+        @include latter-space();
+        margin: 0;
+      }
+      input{
+        border: 1px solid #787878;
+        border-radius: 10px;
+        height: 38px;
+        padding: 8px 22px;
+        margin: 0;
+        width: 100%;
+        &::placeholder{
+          color: #555555
+          ;
+          font-size: 16px;
+          line-height: 22px;
+          font-weight: 500;
+        }
+        &:focus{
+          box-shadow: none;
+          outline: none;
+        }
+      }
+      .form-floating{
+        width: 100%;
+      }
+      textarea{
+        height: 108px;
+        border: 1px solid #787878;
+        border-radius: 10px;
+        padding: 8px 22px;
+        margin: 0;
+        margin-bottom: 28px;
+        margin-top: 16px;
+        &::placeholder{
+          color: #555555
+          ;
+          font-size: 16px;
+          line-height: 22px;
+          font-weight: 500;
+        }
+        &:focus{
+          box-shadow: none;
+          outline: none;
+        }
+      }
+      .submit-btn{
+        font-size: 20px;
+        line-height: 27px;
+        color: #F6774E;
+        font-weight: 700;
+        letter-spacing: 4px;
+        background-color: transparent;
+        border: 1px solid 
+        #F6774E;
+      }
+    }
+  }
+}
+}
 // ----edmall--end
 
